[package]
name = "odot"
version = "0.1.0"
authors = ["L14 <l14ms1@outlook.fr>"]
edition = "2018"


[dependencies]
clap_generate = "3.0.0-beta.4"
console = "0.14.1"
dialoguer = "0.8.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"

directories = "3.0.2"

[dependencies.clap]
version = "3.0.0-beta.4"
default-features = true
features = ["std", "suggestions", "color"]
